--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4286,6 +4286,24 @@
             </intent-filter>
         </activity>
 
+	<!-- YALP STORE Settings -->
+        <activity android:name=".Settings$YALPSettingsActivity"
+            android:label="@string/yalp_settings_title"
+            android:icon="@drawable/ic_yalp_settings_icon"
+            android:parentActivityName="com.android.settings"
+            android:exported="true">
+            <intent-filter android:priority="69">
+                <action android:name="com.android.settings.YALP_SETTINGS" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="com.android.settings.SHORTCUT" />
+            </intent-filter>
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                android:value="com.yalp.settings.YalpSettings" />
+        </activity>
+
         <!-- This is the longest AndroidManifest.xml ever. -->
     </application>
 </manifest>
